스와이프 가이드 아이콘 수정

--- a/detail/mobile/m_adcap.html
+++ b/detail/mobile/m_adcap.html
@@ -66,6 +66,7 @@
 						<div><img src="https://heodokyung.github.io/portfolio/img/project/qr/img_adcapsule.png" alt="모바일 애드캡슐소프트 바로가기 - https://www.adcapsule.kr/indexM.asp" /></div>
 					</div>
 					<div class="m_port_area_app">
+						<span class="swiper__guide">slide_guide</span>
 						<ul class="m_app_list">
 							<li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_adcapsule1.jpg" alt="애드캡슐소프트 웹 페이지 스크린샷" /></li>
 							<li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_adcapsule2.jpg" alt="애드캡슐소프트 웹 페이지 스크린샷" /></li>
