--- a/detail/mobile/m_lotte.html
+++ b/detail/mobile/m_lotte.html
@@ -47,7 +47,7 @@
 				<div class="m_description">
 					<div class="info">
 						<div class="tit"><span>lottemembers</span> <br />사이트 바로가기 QR</div>
-						<div><img src="https://heodokyung.github.io/portfolio/img/project/qr/img_lottem.png" alt="모바일 명동참치 바로가기 QR코드 - m.lottemembers.com" /></div>
+						<div><img src="https://heodokyung.github.io/portfolio/img/project/qr/img_lottem.png" alt="모바일 롯데멤버스 바로가기 QR코드 - m.lottemembers.com" /></div>
 					</div>
 				</div>
 
