--- a/detail/web/w_mirae.html
+++ b/detail/web/w_mirae.html
@@ -69,7 +69,7 @@
 				</div>
 
 				<div class="slide_guide">
-					<span class="ico_guide">slide_guide</span>
+					<span class="swiper__guide">slide_guide</span>
 					<span class="slide_count">
 						<span class="page_num">1</span> / <span class="page_total">0</span>
 					</span>
