--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
 					</ul>
 				</div>
 			</div>
-			<img src="img/main/bg_main_visual.jpg" alt="">
 
 			<div class="movement__wrap"><div><em>scroll</em></div></div>
 		</article>
@@ -96,11 +95,6 @@
 					<ul v-if="!query">
 						<portfolio-items v-for="(items, index) in portfolio" :key="index" :items="items" :class="items.gubun"></portfolio-items>
 					</ul>
-					<!-- <div class="search_result" v-if="query">
-						<ul>
-							<portfolio-items v-for="(items, index) in searching" :key="index" :items="items" v-model="total"></portfolio-items>
-						</ul>
-					</div> -->
 				</div>
 			</article>
 			<!-- //port__list--wrap -->
@@ -114,138 +108,7 @@
 
 
 			<ul class="skill__list">
-				<li>
-					<div class="front">
-						<p>HTML5/CSS3</p>
-						<div class="over">
-							<span class="tit">CLICK</span>
-						</div>
-					</div>
-					<div class="back">
-						<p>웹표준, 웹 접근성을 준수하고 HTML5, CSS3를 활용하여 시멘틱한 마크업을 사용합니다.</p>
-					</div>
-				</li>
-				<li>
-					<div class="front">
-						<p>JavaScript</p>
-						<div class="over">
-							<span class="tit">CLICK</span>
-						</div>
-					</div>
-					<div class="back">
-						JavaScript의 ES5, ES6 문법을 활용하여 웹/앱 환경에 최적화 된 모션과 기능을 구현하도록 노력합니다.
-					</div>
-				</li>
-				<li>
-					<div class="front">
-						<p>jQuery</p>
-						<div class="over">
-							<span class="tit">CLICK</span>
-						</div>
-					</div>
-					<div class="back">
-						jQuery를 활용하여 Json을 활용한 Ajax 데이터 핸들링 및 UI모션 기능을 구현합니다.
-					</div>
-				</li>
-				<li>
-					<div class="front">
-						<p>Vue</p>
-						<div class="over">
-							<span class="tit">CLICK</span>
-						</div>
-					</div>
-					<div class="back">Vue를 공부중이며 현재 저의 포트폴리오 사이트도 Vue로 구현하였습니다.</div>
-				</li>
-
-				<li>
-					<div class="front">
-						<p>Sass</p>
-						<div class="over">
-							<span class="tit">CLICK</span>
-						</div>
-					</div>
-					<div class="back">
-						Sass를 활용하여 CSS를 컴파일 합니다. 간결하고 재사용, 확장성이 가능한 CSS 코드를 사용하려 합니다.
-					</div>
-				</li>
-				<li>
-					<div class="front">
-						<p>Zeplin</p>
-						<div class="over">
-							<span class="tit">CLICK</span>
-						</div>
-					</div>
-					<div class="back">
-						디자이너와 협업을 위해 제플린을 통해 디자인을 전달받고 작업하였고 코멘트로 수정사항과 피드백을 전달하였습니다.
-					</div>
-				</li>
-				<li>
-					<div class="front">
-						<p>Jira</p>
-						<div class="over">
-							<span class="tit">CLICK</span>
-						</div>
-					</div>
-					<div class="back">
-						Jira를 통하여 신규서비스 및 수정사항, 히스토리를 관리하며 소스코드를 배포,수정합니다.
-					</div>
-				</li>
-				<li>
-					<div class="front">
-						<p>Wiki<br>Confluence</p>
-						<div class="over">
-							<span class="tit">CLICK</span>
-						</div>
-					</div>
-					<div class="back">
-						Wiki Confluence를 통해 이슈사항을 히스토리를 남겨서 모두가 확인하고 반복된 실수를 하지 않도록 공유하였습니다.
-					</div>
-				</li>
-
-				<li>
-					<div class="front">
-						<p>RedMine</p>
-						<div class="over">
-							<span class="tit">CLICK</span>
-						</div>
-					</div>
-					<div class="back">
-						RedMine을 통하여 프로젝트의 전체 업무 일정을 확인하고 배분하여 작업을 진행하였습니다.
-					</div>
-				</li>
-				<li>
-					<div class="front">
-						<p>Git/SVN</p>
-						<div class="over">
-							<span class="tit">CLICK</span>
-						</div>
-					</div>
-					<div class="back">
-						여러명의 작업자들이 함께 작업을 진행해야 하기 때문에 히스토리 관리 및 버전관리를 진행하였습니다.
-					</div>
-				</li>
-				<li>
-					<div class="front">
-						<p>Sublime<br>Text</p>
-						<div class="over">
-							<span class="tit">CLICK</span>
-						</div>
-					</div>
-					<div class="back">
-						Sublime Text의 기능을 활용하여 보다 정확한 코드를 작성하고 업무의 효율을 증진시킵니다.
-					</div>
-				</li>
-				<li>
-					<div class="front">
-						<p>Slack</p>
-						<div class="over">
-							<span class="tit">CLICK</span>
-						</div>
-					</div>
-					<div class="back">
-						Slack을 통해 이슈사항을 공유하고 프로젝트별로 채널을 만들어 업무의 상황과 이슈를 공유하여 효율을 높입니다.
-					</div>
-				</li>
+				<skill-list v-for="(items, index) in skill" :key="index" :items="items" :class="items.class"></skill-list>
 			</ul>
 		</article>
 
@@ -270,7 +133,7 @@
 					</li>
 					<li>
 						<dl>
-							<dt>넷트루컨설팅그룹</dt>
+							<dt></dt>
 							<dd>
 								<ul>
 									<li>기간 : 2016.01. ~ 2018.07.</li>
@@ -322,7 +185,6 @@
 
 		<article class="info__about">
 			<h2 class="title">about</h2>
-			<!-- <lottie-player src="https://assets9.lottiefiles.com/packages/lf20_54iisen9.json"  background="transparent"  speed="1"  style="width: 100%; height: 300px;"  loop  autoplay></lottie-player> -->
 			<lottie-player src="https://assets4.lottiefiles.com/private_files/lf30_kj1b8w1w.json"  background="transparent"  speed="1"  style="width: 100%; height:350px;"  loop  autoplay></lottie-player>
 			<div class="step--list__guide info__wrap">
 				<ul>
